Added projects info in case of failure in server

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGOOSEDB_URL = mongodb://localhost:27017/portfolio
+
+# Atlas MongoDB credentials
+Username = "toolt2y"
+Password = "2gsYJkFVMwPqEMLj"
